[gd_scene load_steps=20 format=3 uid="uid://cml20mwiesdyq"]

[ext_resource type="Script" uid="uid://ujriq6r674vy" path="res://scripts/ui/hud.gd" id="1_ek3oe"]
[ext_resource type="FontFile" uid="uid://cai4smkl08013" path="res://assets/brackeys_platformer_assets/brackeys_platformer_assets/fonts/PixelOperator8.ttf" id="2_0qrqu"]
[ext_resource type="PackedScene" uid="uid://uckndpki27j8" path="res://scenes/items/coin.tscn" id="3_mx0kw"]
[ext_resource type="Texture2D" uid="uid://m2b80f572own" path="res://assets/Kings and Pigs Sprites/12-Live and Coins/Big Diamond Idle (18x14).png" id="4_v70rb"]

[sub_resource type="LabelSettings" id="LabelSettings_6r1gv"]
font = ExtResource("2_0qrqu")
font_size = 8
shadow_size = 2
shadow_color = Color(0.015686275, 0.015686275, 0.015686275, 0.5647059)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tg4cr"]
bg_color = Color(0.16206557, 0.1620656, 0.16206548, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37rai"]
bg_color = Color(0.85622066, 0.13333753, 0.4419576, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="LabelSettings" id="LabelSettings_dtxlf"]
font_size = 12

[sub_resource type="AtlasTexture" id="AtlasTexture_wy3vl"]
atlas = ExtResource("4_v70rb")
region = Rect2(0, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebm02"]
atlas = ExtResource("4_v70rb")
region = Rect2(18, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4kgq"]
atlas = ExtResource("4_v70rb")
region = Rect2(36, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_l54d2"]
atlas = ExtResource("4_v70rb")
region = Rect2(54, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_3o6eg"]
atlas = ExtResource("4_v70rb")
region = Rect2(72, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu3mx"]
atlas = ExtResource("4_v70rb")
region = Rect2(90, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6fy0"]
atlas = ExtResource("4_v70rb")
region = Rect2(108, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_i08i5"]
atlas = ExtResource("4_v70rb")
region = Rect2(126, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tp81"]
atlas = ExtResource("4_v70rb")
region = Rect2(144, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_iaedl"]
atlas = ExtResource("4_v70rb")
region = Rect2(162, 0, 18, 14)

[sub_resource type="SpriteFrames" id="SpriteFrames_bnmgh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy3vl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebm02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4kgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l54d2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3o6eg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mu3mx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6fy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i08i5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tp81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iaedl")
}],
"loop": true,
"name": &"default",
"speed": 9.0
}]

[node name="HUDlayer" type="CanvasLayer"]
script = ExtResource("1_ek3oe")

[node name="CoinLabel" type="Label" parent="."]
offset_left = 24.0
offset_top = 16.0
offset_right = 96.0
offset_bottom = 39.0
text = "100"
label_settings = SubResource("LabelSettings_6r1gv")
vertical_alignment = 1

[node name="DiamondLabel" type="Label" parent="."]
offset_left = 24.0
offset_top = 32.0
offset_right = 96.0
offset_bottom = 55.0
text = "100"
label_settings = SubResource("LabelSettings_6r1gv")
vertical_alignment = 1

[node name="coin mark" parent="." instance=ExtResource("3_mx0kw")]
position = Vector2(16, 27)
collision_layer = 2

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = 32.0
offset_top = 250.0
offset_right = 94.0
offset_bottom = 263.0
size_flags_horizontal = 8
theme_override_styles/background = SubResource("StyleBoxFlat_tg4cr")
theme_override_styles/fill = SubResource("StyleBoxFlat_37rai")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="."]
offset_left = -2.0
offset_top = 245.0
offset_right = 38.0
offset_bottom = 268.0
text = "HP"
label_settings = SubResource("LabelSettings_dtxlf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BossHealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 361.0
offset_top = 250.0
offset_right = 423.0
offset_bottom = 263.0
size_flags_horizontal = 8
theme_override_styles/background = SubResource("StyleBoxFlat_tg4cr")
theme_override_styles/fill = SubResource("StyleBoxFlat_37rai")
value = 50.0
show_percentage = false

[node name="BossLabel" type="Label" parent="."]
visible = false
offset_left = 422.0
offset_top = 245.0
offset_right = 462.0
offset_bottom = 268.0
text = "BOSS"
label_settings = SubResource("LabelSettings_dtxlf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimatedSpriteDiamond" type="AnimatedSprite2D" parent="."]
position = Vector2(14, 43)
sprite_frames = SubResource("SpriteFrames_bnmgh")
autoplay = "default"
